ready to pay salary